<resources>

    <string name="app_name">Vote</string>
    <string name="menu_settings">Settings</string>
    <string name="editText_student_number">e.g. 1234567</string>
    <string name="button_register">Register</string>
    <string name="image_content_description">Vote image</string>
    <string name="title_activity_display">Display Candidates</string>
    <string name="title_activity_candidate_info">CandidateInfoActivity</string>
    <string name="textView_candidate_name">*Candidate name*</string>
    <string name="textView_candidate_office">*Candidate office*</string>
    <string name="photo_content_description">Candidate photo</string>
    <string name="textView_candidate_statement">*Candidate statement*</string>
    <string name="button_delete_candidate">Delete</string>
    <string name="title_activity_main_menu">Vote</string>
    <string name="button_display_candidates">Candidates</string>
    <string name="button_about">About</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="textView_enter_student_number">Please enter your student number below:</string>
    <string name="button_confirm_register">Confirm</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="textView_about_app">This App was developed in Android version 2.3.3, API level 10. This is a voting app which allows a user to vote for candidates after viewing the candidate\'s information.</string>
    <string name="button_go_back">Back</string>
    <string name="button_send_email">Vote (Email)</string>
    <string name="textView_candidate_promises">*Candidate promises*</string>
    <string name="textView_candidate_promises_message">Promises:</string>
    <string name="textView_candidate_statement_message">Statement:</string>
    <string name="button_send_tweet">Tweet</string>

</resources>